--- a/style.css
+++ b/style.css
@@ -8,11 +8,85 @@
   --color-light-grey: #dfdfdf;
 }
 
+body {
+  margin: 0px;
+  background-color: var(--color-black);
+}
+
 * {
   box-sizing: border-box;
-  margin: 0px;
+  -webkit-font-smoothing: antialiased;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
 
 li {
   list-style: none;
+}
+
+.container {
+  margin: auto;
+  width: 60%;
+  min-width: 900px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--color-black);
+  padding-top: 200px;
+}
+
+.logo img {
+  width: 150px;
+}
+
+.buttonList {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin: 50px 0px;
+  padding: 0px;
+}
+
+.buttonList__btn.color {
+  width: 130px;
+  padding-top: 40px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.buttonList__btn.color:nth-child(4) {
+  background-color: var(--color-blue);
+}
+
+.buttonList__btn.color:nth-child(5) {
+  background-color: var(--color-yellow);
+}
+
+.buttonList__btn.color:nth-child(6) {
+  background-color: var(--color-pink);
+}
+
+.clothesList {
+  width: 100%;
+  height: 700px;
+  overflow-y: scroll;
+  padding: 0px;
+  margin-bottom: 200px;
+}
+
+.clothesList_item:first-child {
+  margin-top: 0px;
+}
+
+.clothesList_item {
+  width: 100%;
+  height: 100px;
+  margin: 20px 0px;
+  background-color: var(--color-white);
 }
