--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ li {
 
 .logo img {
   width: 150px;
+  cursor: pointer;
 }
 
 .buttonList {
@@ -50,6 +51,10 @@ li {
   width: 100%;
   margin: 50px 0px;
   padding: 0px;
+}
+
+.buttonList__btn {
+  cursor: pointer;
 }
 
 .buttonList__btn.color {
@@ -88,5 +93,25 @@ li {
   width: 100%;
   height: 100px;
   margin: 20px 0px;
+  padding: 0px 20px;
   background-color: var(--color-white);
+}
+
+.clothesList_item {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.clothesList_item_sex {
+  width: 60px;
+}
+
+.clothesList_item_sex {
+  margin: 0px 30px;
+}
+
+.hide {
+  display: none;
 }
